# threepenny-gui

./: .gitignore  .project-settings.yml  .travis.yml  CHANGELOG.md  CONTRIBUTORS  LICENSE  README.md  TODO.md  appveyor.yml  boselecta.cabal  boselecta.hs  cabal.project  flake.nix  ghci  ji.cabal  run-ji-examples-buttons.sh  run-ji-examples-chat.sh  run-ji-examples-missing-dollars.sh  run-ji-examples-use-words.sh  stack-7.10.yaml  stack-7.8.yaml  stack-8.0.yaml  stack.yaml  threepenny-gui.cabal
.github/: FUNDING.yml
.github/workflows/: build-haskell.yml  haskell-ci.yml
Data/Monoid/: Operator.hs
doc/: design-widgets.md  electron.md  frp-behavior.graffle  frp-event.graffle  javascript-ffi.md  mvc-frp.graffle  mvc-nested.graffle  mvc.graffle
doc/design-widgets/: frp-behavior.graffle  frp-event.graffle  mvc-frp.graffle  mvc-nested.graffle  mvc.graffle
doc/dev-notes/: javascript-ffi.md  misc.md  performance.md  websockets.md
doc/electron/: electron.js  index.html  package.json
doc/hal-2017/: README.md
doc/hal-2017/src/: E01_hello_world.hs  E02_html_and_css.hs  E03_html_canvas.hs  E04a_counter.hs  E04b_counter_frp_event.hs  E04c_counter_frp_behavior.hs  Eliza.hs  ghci  runhaskell  stack.yaml
doc/hcar/: template.tex  threepennygui-2014-11.tex  threepennygui-2015-05.tex  threepennygui-2015-11.tex  threepennygui-2016-11.tex  threepennygui-2017-05.tex  threepennygui-2017-11.tex  threepennygui-Hr-2013-11.tex
docs/: _config.yml  index.md
examples/: Buttons.hs  Chat.hs  MissingDollars.hs  UseWords.hs
examples/Control/Concurrent/Chan/: Extra.hs
examples/Control/Monad/: Extra.hs  IO.hs
js/: comm.js  driver.css  ffi.js  index.html  lib.js  log.js
lib/javascript-ffi-threepenny/: CHANGELOG.md  Test.html  build-microhs.sh  javascript-ffi-threepenny.cabal
lib/javascript-ffi-threepenny/example/: Example.hs  ExampleMicroHs.html  build-microhs.sh  mhseval.js
lib/javascript-ffi-threepenny/js/: ffi-microhs.js  index.html
lib/javascript-ffi-threepenny/src/Foreign/: JavaScript.hs  RemotePtr.hs  TestJavaScript.hs
lib/javascript-ffi-threepenny/src/Foreign/JavaScript/: CallBuffer.hs  CallHaskell.hs  CallJavaScript.hs  EventLoop.hs  Functions.hs  JSON.hs  Marshal.hs  MicroHs.hs  Server.hs  Types.hs
lib/javascript-ffi-threepenny/src/Foreign/JavaScript/JSON/: Parser.hs  Types.hs
lib/javascript-ffi-threepenny/src/Foreign/JavaScript/Server/: EventLoop.hs  HTTP.hs  Include.hs  Resources.hs
lib/javascript-ffi-threepenny/src/Foreign/RemotePtr/: Weak.hs
lib/threepenny-gui/: CHANGELOG.md  threepenny-gui.cabal
lib/threepenny-gui/samples/: BarTab.hs  Buttons.hs  CRUD.hs  Canvas.hs  Chat.hs  CurrencyConverter.hs  DragNDropExample.hs  DrumMachine.hs  FadeInFadeOut.hs  GetElementsBy.hs  Mouse.hs  Paths.hs  Svg.hs  TestExceptions.hs  TestSpeed.hs  TestURLFragments.hs  WorkaroundFastEvent.hs  ghci  runhaskell
lib/threepenny-gui/samples/Data/List/: Extra.hs
lib/threepenny-gui/samples/MicroHs/: Example.hs  ExampleMicroHs.html  mhseval.js
lib/threepenny-gui/samples/MicroHs/js/: ffi.js  log.js
lib/threepenny-gui/samples/static/css/: DragNDropExample.css  buttons.css
lib/threepenny-gui/src/Graphics/UI/: Threepenny.hs
lib/threepenny-gui/src/Graphics/UI/Threepenny/: Attributes.hs  Core.hs  Elements.hs  Events.hs  Internal.hs  JQuery.hs  SVG.hs  Server.hs  Timer.hs  Widgets.hs
lib/threepenny-gui/src/Graphics/UI/Threepenny/SVG/: Attributes.hs  Elements.hs
lib/threepenny-gui/src/Reactive/: Threepenny.hs
lib/threepenny-gui/src/Reactive/Threepenny/: Memo.hs  Monads.hs  PulseLatch.hs  Types.hs
samples/: BarTab.hs  BarTab.lhs  Buttons.hs  CRUD.hs  Canvas.hs  CanvasExample.hs  Chat.hs  CurrencyConverter.hs  DragNDropExample.hs  Drawing.hs  DrumMachine.hs  FadeInFadeOut.hs  Game.hs  GameThing.hs  GetElementsBy.hs  InputElements.hs  MissingDollars.hs  Mouse.hs  Paths.hs  Pie.hs  README.md  Svg.hs  TestExceptions.hs  TestSpeed.hs  TestURLFragments.hs  TicTacToe.hs  Tidings.hs  UseWords.hs  VideoAnnotate.hs  breakout.hs  ghci  runhaskell  runhaskell.cmd
samples/Data/List/: Extra.hs
samples/VideoAnnotate/: MediaPlayer.hs
samples/mandelbrot/: Mandelbrot.hs  MandelbrotWidget.hs  main.hs
samples/mandelbrot/content/css/: styles.css
samples/static/: and-then-haskell.txt
samples/static/css/: missing-dollars.css
scripts/: server-restart
src/: BarTab.hs  Buttons.hs  CRUD.hs  Chat.hs  CurrencyConverter.hs  DragNDrop.hs  DragNDropExample.hs  Drawing.hs  DrumMachine.hs  ElementsTest.hs  InputElements.hs  MissingDollars.hs  Mouse.hs  Paths_ji.hs  UseWords.hs  VideoAnnotate.hs
src/Control/: AddHandler.hs  Event.hs
src/Control/Concurrent/: Delay.hs
src/Control/Monad/: IO.hs
src/Data/List/: Extra.hs
src/Data/Monoid/: Operator.hs
src/Foreign/: Coupon.hs  JavaScript.hs  RemotePtr.hs  Test.hs
src/Foreign/JavaScript/: CallBuffer.hs  DOM.hs  EventLoop.hs  Include.hs  JSON.hs  Marshal.hs  Resources.hs  Server.hs  Types.hs
src/Foreign/RemotePtr/: Weak.hs
src/Graphics/UI/: Ji.hs  Threepenny.hs  driver.css  driver.js  index.html  test.hs
src/Graphics/UI/Ji/: Browser.hs  DOM.hs  Elements.hs  Forms.hs  JQuery.hs  Types.hs
src/Graphics/UI/Ji/Internal/: Include.hs  Types.hs
src/Graphics/UI/Threepenny/: Attributes.hs  AttributesSVG.hs  Browser.hs  Canvas.hs  Core.hs  DOM.hs  DragNDrop.hs  Elements.hs  ElementsSVG.hs  Events.hs  Forms.hs  Internal.hs  JQuery.hs  MonadUI.hs  Properties.hs  Timer.hs  Types.hs  Widgets.hs
src/Graphics/UI/Threepenny/Elements/: Checkbox.hs  Class.hs
src/Graphics/UI/Threepenny/Internal/: Core.hs  Driver.hs  FFI.hs  Include.hs  Resources.hs  Types.hs
src/Graphics/UI/Threepenny/SVG/: Attributes.hs  Elements.hs
src/Reactive/: Threepenny.hs
src/Reactive/Threepenny/: Memo.hs  Monads.hs  PulseLatch.hs  Types.hs
src/System/Mem/: Coupon.hs  RemotePtr.hs
src/VideoAnnotate/: MediaPlayer.hs
wwwroot/: and-then-haskell.txt  buttons.html  chat.html  missing-dollars.html  use-words.html
wwwroot/css/: chat.css  tictactoe.css  use-words.css
wwwroot/js/: x.js
