Name:                boselecta
Version:             0.1
Synopsis:            Haskell/JS/stuff.
Description:         Haskell/JS/stuff.
License:             GPL
Author:              Chris Done <chrisdone@gmail.com>
Maintainer:          Chris Done <chrisdone@gmail.com>
Copyright:           2011 by Chris Done
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable boselecta
  Main-is:           boselecta.hs
  Ghc-options:       -threaded -O2
  Build-depends:     base                      >= 4     && < 5
                    ,snap-server
                    ,snap-core
                    ,mtl
                    ,text
                    ,safe
                    ,containers
                    ,bytestring
                    ,json == 0.4.4