Name:                ji
Version:             0.1
Synopsis:            Haskell-web browser interface (ji: “JavaScript Interface”).
Description:         Manipulate the DOM and handle events of the browser from Haskell.
                     To build, might need --constraint=base16-bytestring==0.1.0.* on GHC 6.12.3.
License:             BSD3
Author:              Chris Done <chrisdone@gmail.com>
Maintainer:          Chris Done <chrisdone@gmail.com>
Copyright:           2011 by Chris Done
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.8

Library
  Hs-source-dirs:    src
  Exposed-modules:   Graphics.UI.Ji, Graphics.UI.Ji.Types, Graphics.UI.Ji.Internal.Types, Graphics.UI.Ji.DOM, Graphics.UI.Ji.Elements, Graphics.UI.Ji.JQuery, Graphics.UI.Ji.Browser
  Other-modules:     Control.Concurrent.Chan.Extra, Control.Monad.Extra, Data.Monoid.Operator, Control.Monad.IO, Control.Concurrent.Delay, Data.List.Extra
  Ghc-options:       -threaded -O2
  Build-depends:     base                      >= 4     && < 5
                    ,snap-server
                    ,snap-core
                    ,mtl
                    ,text
                    ,safe
                    ,containers
                    ,bytestring
                    ,json == 0.4.4
                    ,time
                    ,utf8-string
                    ,network
                    ,filepath
                    ,data-default

Executable ji-examples-buttons
  Main-is:           Buttons.hs
  Hs-source-dirs:    examples/
  Ghc-options:       -threaded -O2
  Build-depends:     base                      >= 4     && < 5
                    ,snap-server
                    ,snap-core
                    ,mtl
                    ,text
                    ,safe
                    ,containers
                    ,bytestring
                    ,json == 0.4.4
                    ,time
                    ,ji

Executable ji-examples-missing-dollars
  Main-is:           MissingDollars.hs
  Hs-source-dirs:    examples/
  Ghc-options:       -threaded -O2
  Build-depends:     base                      >= 4     && < 5
                    ,snap-server
                    ,snap-core
                    ,mtl
                    ,text
                    ,safe
                    ,containers
                    ,bytestring
                    ,json == 0.4.4
                    ,ji

Executable ji-examples-use-words
  Main-is:           UseWords.hs
  Hs-source-dirs:    examples/
  Ghc-options:       -threaded -O2
  Build-depends:     base                      >= 4     && < 5
                    ,snap-server
                    ,snap-core
                    ,mtl
                    ,text
                    ,safe
                    ,containers
                    ,bytestring
                    ,json == 0.4.4
                    ,time
                    ,ji
                    ,parsec

Executable ji-examples-chat
  Main-is:           Chat.hs
  Hs-source-dirs:    examples/
  Ghc-options:       -threaded -O2
  Build-depends:     base                      >= 4     && < 5
                    ,snap-server
                    ,snap-core
                    ,mtl
                    ,text
                    ,safe
                    ,containers
                    ,bytestring
                    ,json == 0.4.4
                    ,time
                    ,ji
                    ,parsec
