name:                javascript-ffi-threepenny
version:             0.1.0.0
synopsis:            JavaScript FFI, used by threepenny-gui
description:
    This package implements a Foreign Function Interface (FFI) for JavaScript.
    .
    This JavaScript FFI allows you to call JavaScript code from Haskell,
    and (more limited) Haskell code from JavaScript.
    .
    This JavaScript FFI is implemented in multiple ways:
    .
    * When compiled to native code via GHC, this package implements a small web server.
      Loading a page will open a WebSocket connection
      between browser window and server.
      Then, you can call JavaScript functions in the browser window
      from the server code.
    .
    * When compiled to WebAssembly
      via [MicroHs](https://github.com/augustss/MicroHs) and emscripten,
      this package allows you to call JavaScript functions in the same runtime environment
      — using the same API as the use case above.
    .
    This package is tailored to the needs of the
    [threepenny-gui](https://heinrichapfelmus.github.io/threepenny-gui/)
    package, but can be used independently.

license:             BSD3
author:              Heinrich Apfelmus
maintainer:          Heinrich Apfelmus <apfelmus at quantentunnel dot de>
homepage:            https://heinrichapfelmus.github.io/threepenny-gui/
bug-reports:         https://github.com/HeinrichApfelmus/threepenny-gui/issues
category:            Web, GUI
build-type:          Simple
cabal-version:       >=1.10
tested-with:
      GHC == 8.0.2
    , GHC == 8.2.2
    , GHC == 8.4.4
    , GHC == 8.6.5
    , GHC == 8.8.4
    , GHC == 8.10.7
    , GHC == 9.2.8
    , GHC == 9.4.7
    , GHC == 9.6.6
    , GHC == 9.8.4
    , GHC == 9.10.1
    , GHC == 9.12.2

extra-source-files:
      CHANGELOG.md
    , js/*.html
    , js/*.css
    , js/*.js
    , js/lib/*.js
    , example/Example.hs
    , example/ExampleMicroHs.html
    , example/build-microhs.sh
    , example/mhseval.js

flag rebug
    description: The library uses some techniques that are highly
                 non-deterministic, for example garbage collection
                 and concurrency.
                 Bugs in these subsystems are harder to find.
                 Activating this flag will expose more of them.
    default:     False
    manual:      True

source-repository head
    type:               git
    location:           https://github.com/HeinrichApfelmus/threepenny-gui.git

library
  default-language: Haskell2010
  other-extensions: CPP
  hs-source-dirs:   src
  exposed-modules:
    Foreign.JavaScript
    Foreign.JavaScript.Functions
    Foreign.JavaScript.JSON
    Foreign.RemotePtr
  other-modules:
    Foreign.JavaScript.CallBuffer
    Foreign.JavaScript.CallHaskell
    Foreign.JavaScript.CallJavaScript
    Foreign.JavaScript.JSON.Parser
    Foreign.JavaScript.JSON.Types
    Foreign.JavaScript.Marshal
    Foreign.JavaScript.Types
    Foreign.RemotePtr.Weak
  cpp-options:      -DCABAL
  if flag(rebug)
      cpp-options:  -DREBUG
      ghc-options:  -O2

  if impl(ghc)
    exposed-modules:
      Foreign.JavaScript.Server
    other-modules:
      Foreign.JavaScript.Server.Include
      Foreign.JavaScript.Server.Resources
      Foreign.JavaScript.Server.HTTP
      Foreign.JavaScript.Server.EventLoop
    build-depends:
        base                   >= 4.8   && < 4.22
      , aeson                  (>= 0.7 && < 0.10) || == 0.11.* || (>= 1.0 && < 2.3)
      , async                  >= 2.0    && < 2.3
      , bytestring             >= 0.9.2  && < 0.13
      , containers             >= 0.4.2  && < 0.9
      , data-default           >= 0.5.0  && < 0.9
      , deepseq                >= 1.3.0  && < 1.6
      , exceptions             >= 0.6    && < 0.11
      , filepath               >= 1.3.0  && < 1.6.0
      , file-embed             >= 0.0.10 && < 0.1
      , hashable               >= 1.2.0  && < 1.6
      , safe                   == 0.3.*
      , snap-server            >= 0.9.0  && < 1.2
      , snap-core              >= 0.9.0  && < 1.1
      , stm                    >= 2.2    && < 2.6
      , template-haskell       >= 2.7.0  && < 2.24
      , text                   >= 0.11   && < 2.2
      , transformers           >= 0.3.0  && < 0.7
      , unordered-containers   == 0.2.*
      , websockets             (>= 0.8    && < 0.12.5) || (> 0.12.5.0 && < 0.14)
      , websockets-snap        >= 0.8    && < 0.11
      , vector                 >= 0.10   && < 0.14
    ghc-options: -Wcompat -Wnoncanonical-monad-instances

  if impl(mhs)
    other-modules:
      Foreign.JavaScript.MicroHs
    build-depends:
        base                   >= 4.8   && < 4.22
      , containers             >= 0.4.2  && < 0.9
